--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- <img src="../src/imgs/69474061_2731875950179801_8914534849998487552_o.jpg">
@@ -29,3 +30,6 @@
   <!--type="module" pues porque se va a importar y exportar-->
 </body>
 </html>
+<!--Navbar -->
+
+  <!--/.Navbar -->
