--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
 </head>
 <body>
     <!-- <img src="../src/imgs/69474061_2731875950179801_8914534849998487552_o.jpg">
